2002-11-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: ... and everyting else - merged SODIPODI_GTK2_BRANCH

	* po/Makevars: Added this

2002-11-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl, m4.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add intl/Makefile, po/Makefile.in, m4/Makefile.

2002-11-27  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): New variable.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.in (AC_OUTPUT): Add intl/Makefile, po/Makefile.in, m4/Makefile.

2002-11-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.29pre

2002-11-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-glyphs.c (nr_arena_glyphs_group_add_component): Skip
	if zero-sized valid path

	* src/libnr/nr-path.c (nr_path_matrix_f_bbox_f_union): Allow NULL path member
	(nr_path_matrix_f_point_f_bbox_wind_distance): Ditto
	(nr_path_duplicate_transform): Ditto

	* src/libnrtype/nr-typeface.h: Added family member to definition

	* src/libnrtype/nr-type-directory.c (nr_type_register): Use family from def

	* src/libnrtype/nr-type-ft2.c (nr_type_ft2_build_def): Set family member

	* src/libnrtype/nr-type-gnome.c (nr_type_gnome_build_def): Set family member

2002-11-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dyna-draw-context.c: Clamp drag to [0.0 1.0]

2002-11-23  Masatake YAMATO  <jet@gyve.org>

	* src/node-context.c: Inlucde document.h.
	(sp_node_context_stamp): New function.
	(sp_node_context_root_handler): Do stamp if space key
	is pressed during dragging.

	* src/nodepath.c (stamp_repr): New function.
	(node_event): Do stamp if the space key is pressed.
	(node_ctrl_event): New function.
	(sp_nodepath_node_new): Connected node_ctrl_event to n->p.knot::event.
	Connected node_ctrl_event to n->n.knot::event. 

	* src/helper/bezier-utils.c (sp_bezier_fit_cubic_full): Fix memry leaks(u, uPrime).